bundle/tests/scorecard/minikube-kuttl/ingress-certificate/01-rc-with-cert.yaml
apiVersion: apps.openliberty.io/v1beta2
kind: OpenLibertyApplication
metadata:
  name: ingress-with-cert-rc
spec:
  # Add fields here
  applicationImage: icr.io/appcafe/open-liberty:full-java8-openj9-ubi
  replicas: 1
  expose: true
  route:
    host: myapp.mycompany.com
    path: "/"
    pathType: Prefix
    certificateSecretRef: ingress-tls-secret
    termination: reencrypt
