bundle/tests/scorecard/minikube-kuttl/ingress-certificate/02-delete-ingress.yaml
apiVersion: apps.openliberty.io/v1beta2
kind: OpenLibertyApplication
metadata:
  name: ingress-with-cert-ol
spec:
  # Add fields here
  applicationImage: icr.io/appcafe/open-liberty:full-java8-openj9-ubi
  replicas: 1
  expose: false
