bundle/tests/scorecard/minikube-kuttl/ingress-certificate/02-delete-route.yaml
apiVersion: apps.openliberty.io/v1beta2
kind: OpenLibertyApplication
metadata:
  name: ingress-with-cert-rc
spec:
  # Add fields here
  expose: false
