bundle/tests/scorecard/minikube-kuttl/ingress-certificate/03-delete-secret.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: apps.openliberty.io/v1beta2
  kind: OpenLibertyApplication
- apiVersion: v1
  kind: Secret
  name: ingress-tls-secret
