bundle/tests/scorecard/minikube-kuttl/ingress-certificate/01-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-with-cert-ol
status:
  replicas: 1
  readyReplicas: 1
  updatedReplicas: 1
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress-with-cert-ol
spec:
  tls:
    - hosts:
        - myapp.mycompany.com
      secretName: ingress-tls-secret
  rules:
    - host: myapp.mycompany.com
      http:
        paths:
          - path: /
            pathType: Prefix
