bundle/tests/scorecard/minikube-kuttl/ingress-certificate/02-errors.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress-with-cert-ol
